--- a/tp1_chagas/src/main/webapp/WEB-INF/web.xml
+++ b/tp1_chagas/src/main/webapp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <servlet>
         <servlet-name>Meu1oservlet</servlet-name>
-        <servlet-class>br.edu.iff.tp1_chagas.Meu1oservlet</servlet-class>
+        <servlet-class>br.edu.iff.tp1_chagas.servlets.Meu1oservlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Meu1oservlet</servlet-name>
